--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,23 +1,95 @@
 body {
-    background-color: bisque;
+    background-color: whitesmoke;
+    margin: 0;
+    padding: 90px 20px 0;
+    box-sizing: border-box;
 }
 
+header {
+    position: fixed;
+    background-color: #076af0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 90px;
+}
+
+aside {
+    padding: 5px;
+    position: fixed;
+    background-color: bisque;
+    top: 90px;
+    left: 0;
+    bottom: 20px;
+    width: 20%;
+}
+
+footer {
+    position: fixed;
+    background-color: black;
+    color: white;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+}
+
+section {
+    overflow-y: scroll;
+    padding: 5px;
+    position: fixed;
+    background-color: aquamarine;
+    top: 90px;
+    left: 20%;
+    bottom: 20px;
+    width: 80%;
+    
+}
+
+.logo {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 40px;
+    line-height: 90px;
+}
+
+.nav-link {
+    color: white;
+    text-decoration: none;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.nav-menu {
+    display: flex;
+    list-style: none;
+    margin-right: 40px;
+}
+
+.nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 90px;
+}
+
+.nav-menu-link {
+    padding: 8px 12px;
+    transition: 0.5s;
+}
+
+.nav-menu-link:hover {
+    background-color: #024070;
+    border-radius: 10px;
+}
 
 .resaltado {
     background-color: blue;
     color: white;
-}
-
-nav a {
-    text-decoration:  none;
-    background-color: black;
-    color: yellow;
-}
-
-nav a:hover {
-    background-color: green;
-    color: black;
-    font-size: 18px;
 }
 
 th {
