--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -41,7 +41,9 @@
                             <div class="modal-body">
                                 <div class="mb-3">
                                     <label for="categoria">[[#{producto.categoria}]]</label>
-                                    <input type="number" class="form-control" name="idXategoria" required="true"/>
+                                    <select class="form-select" aria-label="Default select example" name="categoria.idCategoria">
+                                        <option th:each="c : ${categorias}" th:value="${c.idCategoria}" th:text="${c.descripcion}"></option>
+                                    </select>
                                 </div>
                                 <div class="mb-3">
                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
@@ -49,7 +51,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="detalle">[[#{producto.detalle}]]</label>
-                                    <input type="text" class="form-control" name="detalle" required="true"/>
+                                    <textarea class="form-control" name="detalle"></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="precio">[[#{producto.precio}]]</label>
@@ -60,13 +62,13 @@
                                     <input type="number" class="form-control" name="existencias" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="activo">[[#{producto.activo}]]</label>
-                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
-                                </div>
-                                <div class="mb-3">
                                     <label for="imagen">[[#{producto.imagen}]]</label>
                                     <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);"/>
                                     <img id="blah" src="#" alt="your image" height="200"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="activo">[[#{producto.activo}]]</label>
+                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -92,6 +94,10 @@
                                     <thead class="table-dark">
                                         <tr><th>#</th>
                                             <th>[[#{producto.descripcion}]]</th>
+                                            <th>[[#{producto.precio}]]</th>
+                                            <th>[[#{producto.existencias}]]</th>
+                                            <th>[[#{producto.total}]]</th>
+                                            <th>[[#{producto.categoria}]]</th>
                                             <th>[[#{producto.activo}]]</th>
                                             <th></th></tr>
                                     </thead>
@@ -99,6 +105,10 @@
                                         <tr th:each="producto, contador : ${productos}">
                                             <td>[[${contador.count}]]</td>
                                             <td>[[${producto.descripcion}]]</td>
+                                            <td class="text-end">[[${producto.precio}]]</td>
+                                            <td class="text-center">[[${producto.existencias}]]</td>
+                                            <td class="text-end">[[${producto.precio*producto.existencias}]]</td>
+                                            <td>[[${producto.categoria.descripcion}]]</td>
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
                                             <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                                                    class="btn btn-danger">
@@ -118,7 +128,7 @@
                         <div class="card text-center bg-success text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{producto.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalProductos}]]</h4>
+                                <h4 class="fs-2"><i class= "fas fa-users"></i> [[${totalProductos}]]</h4>
                             </div>
                         </div>
                     </div>
