Semana 11 Usuarios y Registro

--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -176,8 +176,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 d-grid">                                
-                        <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
-                           class="btn btn-danger">
+                        <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}" class="btn btn-danger">
                             <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                         </a>
                     </div>
