--- a/src/main/resources/templates/carrito/listado.html
+++ b/src/main/resources/templates/carrito/listado.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleah.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http://www.thymeleah.org">
     <head th:replace="~{layout/plantilla :: head}">
         <title>TODO supply a title</title>
@@ -8,7 +9,7 @@
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
         
-        <section th:replace="~{carrito/fragmentos :: listadoProductos}"/>
+        <section th:replace="~{carrito/fragmentos :: listadoCarrito}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
